--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
                 <!-- <div id="app-properties"></div> -->
             </div>
         </div>
-        <div id="progress" class="progresso" style="display: none;">
+        <!-- <div id="progress" class="progresso" style="display: none;">
             <span></span>
+        </div> -->
+        <div id="progress" class="progress" style="display: none;">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <div id="splash" class="container _hidden" style="display: none;">
             <img src="./img/learn-wise-logo.png" alt="">
@@ -176,6 +179,13 @@
             </div>
         </div>
 
+        <div class="feedback good" style="display: none;">
+            <div class="feedback-icon"></div>
+        </div>
+        <div class="feedback bad" style="display: none;">
+            <div class="feedback-icon"></div>
+        </div>
+
         <template id="menu-section">
             <p class="opts-header"></p>
             <div class="list-group"></div>
@@ -189,7 +199,7 @@
             <p class="opts-header">Upload file</p>
             <div class="list-group">
                 <div class="list-group-item list-group-item-action flex-column align-items-start">
-                    <span>TEST Use this option to load questions from your computer or mobile. File content must be in <a href="https://github.com/lukasz-jakub-adamczuk/codemarker#exam-format">special format</a> to be parsed with application.</span>
+                    <span>Use this option to load questions from your computer or mobile. File content must be in <a href="https://github.com/lukasz-jakub-adamczuk/codemarker#exam-format">special format</a> to be parsed with application.</span>
                     <div class="input-group mb-2">
                         <button id="load" class="btn btn-primary">Load your questions</button>
                     </div>
