--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
         <link rel="manifest" href="manifest.json">
         <!-- <link rel="stylesheet" href="bootstrap-4.0.0/dist/css/bootstrap.css"> -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        
+        <!-- bootstrap 4 -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         
+        <!-- bootstrap 5 -->
+        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script> -->
+
         <!-- light theme -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/light.css">
         <!-- dark theme -->
@@ -110,12 +116,12 @@
                 <div class="row justify-content-between">
                     <a id="prev-button" href="#" class="button prev disabled"><span>Prev</span></a>
                     <a id="start-button" class="button start disabled"><span>Start</span></a>
-                    <a id="stop-button" class="button stop disabled"><span>Start</span></a>
+                    <a id="stop-button" class="button stop disabled"><span>Stop</span></a>
                     <label id="show-options" for="options-tgr" class="button menu">
                         <a id="menu-button" class=""><span>Menu</span></a>
                     </label>
-                    <a id="answers-button" class="button answers disabled"><span>Menu</span></a>
-                    <a id="print-button" class="button print disabled"><span>Menu</span></a>
+                    <a id="answers-button" class="button answers disabled"><span>Help</span></a>
+                    <a id="print-button" class="button print disabled"><span>Print</span></a>
                     <a id="next-button" href="#" class="button next disabled"><span>Next</span></a>
                 </div>
             </div>
