--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
         <script src="js/marked.min.js"></script>
         <script src="js/sha1.js"></script>
-        <!-- <script src="js/variables.js"></script> -->
+        <script src="js/variables.js"></script>
         <script src="js/langs/en.js"></script>
         <script src="js/langs/pl.js"></script>
         <script src="js/translations.js"></script>
