--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="./favicon-x-mass.png">
+        <!-- <link rel="icon" href="./favicon-x-mass.png"> -->
+        <link rel="icon" href="./favicon-summer.png">
         <meta name="theme-color" content="#ffffff"/>
         <meta name="referrer" content="never" />
         <link rel="manifest" href="manifest.json">
@@ -98,7 +99,8 @@
             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <div id="splash" class="container _hidden" style="display: none;">
-            <img src="./img/learn-wise-logo-x-mass.png" alt="">
+            <!-- <img src="./img/learn-wise-logo-x-mass.png" alt=""> -->
+            <img src="./img/learn-wise-logo-summer.png" alt="">
         </div>
         <div id="exams" class="container _hidden" style="display: none;">
             <div class="list"></div>
